# robot_ctrl_rust_app

./: .gitignore  Cargo.toml  Makefile  README.md  commit.ps1  deny.toml  make.ps1  route.md
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml  installer.nsi  release-validate.yml  release.yml
crates/devtools/: Cargo.toml
crates/devtools/src/: audit.rs  build.rs  clean.rs  main.rs  pr.rs  release.rs  validate.rs  version.rs
crates/robot_control/: Cargo.toml
crates/robot_control/src/: app.rs  main.rs
crates/robot_control/src/models/: adrc.rs  canopen.rs  control_algorithm.rs  incremental_pid.rs  mod.rs  modbus.rs  packet.rs  pid_controller.rs  smith_predictor.rs
crates/robot_control/src/services/: can_service.rs  mcp_server.rs  mod.rs  serial_service.rs  tcp_service.rs
crates/robot_control/src/views/: canopen_view.rs  mod.rs  plugins.rs  protocol_analysis.rs  serial_debug.rs  topology.rs
crates/robot_core/: Cargo.toml
crates/robot_core/src/: config.rs  connection.rs  error.rs  lib.rs  plugin.rs
crates/tools_suite/: Cargo.toml
crates/tools_suite/src/: main.rs  workflow.rs
crates/tools_suite/src/tools/: checksum.rs  log_inspector.rs  time_converter.rs
docs/: RELEASE_SPEC.md  book.toml
docs/help/: index.html
docs/src/: README.md  SUMMARY.md  configuration.md  contributing.md  getting-started.md  installation.md  local-help.md  operations-release.md  operations-rollback.md  tools-suite-architecture.md  troubleshooting.md  workflow.md
docs/src/indie-tools/: README.md
docs/src/micro-tools/: README.md  base64.md  checksum.md  csv.md  json.md  jwt.md  log-inspector.md  regex.md  time-converter.md  url-codec.md  uuid.md
docs/src/robot-control/: README.md  algorithms.md  canopen.md  connections.md  dashboard.md  data_viz.md  mcp.md  modbus.md  nn_tuning.md  packet_builder.md  pid_control.md  protocol.md  serial_debug.md  topology.md
release_notes/: RELEASE_INDEX.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.1.2.md  RELEASE_NOTES_v0.1.3.md  RELEASE_NOTES_v0.1.4.md  RELEASE_NOTES_v0.1.5.md  RELEASE_NOTES_v0.1.6.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  RELEASE_NOTES_v0.2.1.md
release_notes/archive_assets/: README.md
release_notes/archive_assets/v0.1.7/: checksums-sha256.txt
robot_control_rust/: ARCHITECTURE_AND_USAGE.md  Cargo.toml  README.md
robot_control_rust/.cargo/: config.toml
robot_control_rust/.github/: pull_request_template.md
robot_control_rust/.github/workflows/: platform-validation.yml
robot_control_rust/installer/: robot_control_rust_x64.iss  robot_control_rust_x64.nsi
robot_control_rust/release_artifacts/v0.1.0/: RELEASE_NOTES_v0.1.0.md
robot_control_rust/scripts/: build-docs-bundle.ps1  create_github_release.ps1  package_windows_x64_iexpress_installer.ps1  package_windows_x64_installer.ps1  package_windows_x64_portable_installer.ps1  package_windows_x64_release_assets.ps1  preflight.ps1  preflight.sh  release_slim.ps1
robot_control_rust/src/: app.rs  i18n.rs  lib.rs  main.rs
robot_control_rust/src/models/: bang_bang.rs  cascade_pid.rs  chassis_kinematics.rs  connection.rs  connection_status.rs  data_channel.rs  fuzzy_pid.rs  ladrc.rs  lqr.rs  mpc.rs  neural_network.rs  preset.rs  robot_state.rs  robot_topology.rs  serial_device.rs
robot_control_rust/src/services/: can_service.rs  connection_provider.rs  llm_service.rs  mcp_server.rs  mod.rs  serial_service.rs  tcp_service.rs  udp_service.rs
robot_control_rust/src/views/: connections.rs  dashboard.rs  data_visualization.rs  data_viz.rs  mod.rs  modbus_view.rs  nn_tuning.rs  packet_builder.rs  pid_control.rs  protocol_analysis.rs  protocol_analysis_utf8.rs  ui_kit.rs
rust_indie_tools/: README.md
rust_indie_tools/csv_cleaner_gui/: Cargo.toml  README.md
rust_indie_tools/csv_cleaner_gui/src/: main.rs
rust_indie_tools/jwt_inspector_gui/: Cargo.toml  README.md
rust_indie_tools/jwt_inspector_gui/src/: main.rs
rust_indie_tools/regex_workbench_gui/: Cargo.toml  README.md
rust_indie_tools/regex_workbench_gui/src/: main.rs
rust_indie_tools/rust_indie_tools_core/: Cargo.toml
rust_indie_tools/rust_indie_tools_core/src/: lib.rs
rust_micro_tools/: Cargo.toml  README.md
rust_micro_tools/src/: app.rs  cli.rs  i18n.rs  main.rs  settings.rs  theme.rs
rust_micro_tools/src/tools/: base64_workshop.rs  checksum.rs  csv_cleaner.rs  json_workshop.rs  jwt_inspector.rs  log_inspector.rs  mod.rs  regex_workbench.rs  time_converter.rs  url_codec.rs  uuid_batch.rs
rust_tools_suite/: ARCHITECTURE_AND_USAGE.md  Cargo.toml  README.md
rust_tools_suite/packaging/: package_deb.sh
rust_tools_suite/packaging/linux/: robot-control-rust.desktop  rust-tools-suite.desktop
rust_tools_suite/src/: app.rs  cli.rs  file_ops.rs  guide.rs  i18n.rs  main.rs  settings.rs  theme.rs
rust_tools_suite/src/tools/: base64_workshop.rs  csv_cleaner.rs  json_workshop.rs  jwt_inspector.rs  mod.rs  regex_workbench.rs  url_codec.rs  uuid_batch.rs
scripts/: Makefile  README.md  cleanup-process-files.ps1  common.psm1  enforce-workspace-structure.ps1  git-check.ps1  install-hooks.ps1  make.ps1  pr-helper.ps1  review-config.json  review.ps1  rust-review.ps1  smart-bump.ps1  smart-rollback.ps1  sync-release-state.ps1  task  task.ps1  update-release-index.ps1  workflow-seal.ps1  workspace-governance.json
scripts/go/rusktask/: README.md  go.mod  main.go
scripts/hooks/: commit-msg.ps1  pre-commit.ps1  pre-push.ps1
scripts/ubuntu/: Makefile  task.sh
scripts/windows/: common.psm1  make.ps1  task.ps1
