[workspace]
resolver = "2"
members = [
    "crates/robot_core",
    "crates/robot_control",
    "crates/tools_suite",
    "crates/devtools",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false

[profile.dev]
opt-level = 1
debug = 0
strip = true
codegen-units = 16
panic = "abort"

[profile.test]
opt-level = 1
debug = 0
strip = true
incremental = false