[package]
name = "robot_control_rust"
version = "0.1.1"
edition = "2021"
description = "Robot Control System - Pure Rust Implementation"

[lib]
name = "robot_control_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# GUI framework
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_plot = "0.31"

# Serial communication
serialport = "4.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = { version = "0.4.48", features = ["serde"] }

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# HTTP client for LLM API
ureq = { version = "3", features = ["json"] }

# High Performance & Intelligence
nom = "7.1"
crossbeam-channel = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
debug = 0
incremental = false

[profile.dev]
opt-level = 1
debug = 0
strip = true
codegen-units = 16
incremental = false
panic = "abort"

[profile.test]
opt-level = 1
debug = 0
strip = true
incremental = false
