[package]
name = "rust_micro_tools"
version = "0.1.1"
edition = "2021"
description = "Rust Micro Tools Suite with closed-loop workflow"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
crc32fast = "1"
sha2 = "0.10"
chrono = "0.4"
urlencoding = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# GUI / TUI / Intelligent Interactive Additions
inquire = "0.7"
crossterm = "0.27"
indicatif = "0.17"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
serialport = "4.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
