[package]
name = "devtools"
version = "0.1.0"
edition = "2021"
description = "Developer Tools - Build, Release and CI/CD Utilities"

[[bin]]
name = "devtools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.20"
semver = "1"
anyhow = "1"
walkdir = "2"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
colored = "2.1"
indicatif = "0.17"
console = "0.15"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"