[package]
name = "robot_control"
version = "0.1.8"
edition = "2021"
description = "Robot Control System - Pure Rust Implementation"

[lib]
name = "robot_control_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["gui", "serial", "tcp", "udp"]
gui = []
serial = ["robot_core/serial"]
tcp = ["robot_core/tcp"]
udp = ["robot_core/udp"]
modbus = []
canopen = []
llm = ["robot_core/llm"]
nn = []

[dependencies]
robot_core = { path = "../robot_core", features = ["serde"] }
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_plot = "0.31"
serialport = "4.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
tracing-appender = "0.2"
anyhow = "1"
thiserror = "2"
ureq = { version = "3", features = ["json"] }
nom = "7.1"
crossbeam-channel = "0.5"