[package]
name = "tools_suite"
version = "0.1.8"
edition = "2021"
description = "Rust Tools Suite with responsive desktop workflow"

[[bin]]
name = "tools_suite"
path = "src/main.rs"

[features]
default = ["gui", "cli"]
gui = []
cli = []
base64 = []
checksum = []
csv = []
jwt = []
json = []
log = []
regex = []
time = []
url = []
uuid = []

[dependencies]
robot_core = { path = "../robot_core", features = ["serde"] }
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
crc32fast = "1"
sha2 = "0.10"
chrono = "0.4"
urlencoding = "2"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
inquire = "0.7"
crossterm = "0.27"
indicatif = "0.17"
colored = "2.1"
clap = { version = "4.5", features = ["derive"] }
serialport = "4.8"
rfd = "0.15"
jsonwebtoken = "9"

[dev-dependencies]
rsa = { version = "0.9", features = ["pem"] }