[package]
name = "csv_cleaner_gui"
version = "0.1.5"
edition = "2021"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
rust_indie_tools_core = { version = "0.1.4", path = "../rust_indie_tools_core" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"




